@@ -17,6 +17,7 @@ import javax.servlet.http.HttpSessionAttributeListener;
 import javax.servlet.http.HttpSessionIdListener;
 import javax.servlet.http.HttpSessionListener;
 import java.io.InputStream;
+import java.lang.reflect.InvocationTargetException;
 import java.net.InetSocketAddress;
 import java.net.MalformedURLException;
 import java.net.URL;
@@ -68,6 +69,7 @@ public class ServletContext implements javax.servlet.ServletContext {
     private SessionService sessionService;
     private Set<SessionTrackingMode> sessionTrackingModeSet;
 
+    private boolean enableLookupFlag = false;
     private String serverHeader;
     private String contextPath;
     private String requestCharacterEncoding;
@@ -78,6 +80,14 @@ public class ServletContext implements javax.servlet.ServletContext {
 
     public ServletContext(ClassLoader classLoader) {
         this.classLoader = classLoader == null ? getClass().getClassLoader(): classLoader;
+    }
+
+    public boolean isEnableLookupFlag() {
+        return enableLookupFlag;
+    }
+
+    public void setEnableLookupFlag(boolean enableLookupFlag) {
+        this.enableLookupFlag = enableLookupFlag;
     }
 
     public void setServerAddress(InetSocketAddress serverAddress) {
@@ -99,7 +109,7 @@ public class ServletContext implements javax.servlet.ServletContext {
         if(asyncExecutorService == null) {
             synchronized (this){
                 if(asyncExecutorService == null) {
-                    asyncExecutorService = new ThreadPoolX("Async",8);
+                    asyncExecutorService = new ThreadPoolX("Async", Runtime.getRuntime().availableProcessors() * 2);
 //                            executorService = new DefaultEventExecutorGroup(15);
                 }
             }
@@ -440,9 +450,8 @@ public class ServletContext implements javax.servlet.ServletContext {
         try {
             return addServlet(servletName, (Class<? extends Servlet>) Class.forName(className).newInstance());
         } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
-            e.printStackTrace();
+            throw new IllegalStateException("addServlet error ="+e+",servletName="+servletName,e);
         }
-        return null;
     }
 
     @Override
@@ -463,9 +472,9 @@ public class ServletContext implements javax.servlet.ServletContext {
     public ServletRegistration addServlet(String servletName, Class<? extends Servlet> servletClass) {
         Servlet servlet = null;
         try {
-            servlet = servletClass.newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
-            e.printStackTrace();
+            servlet = servletClass.getConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
+            throw new IllegalStateException("createServlet error ="+e+",servletName="+servletName,e);
         }
         return addServlet(servletName,servlet);
     }
@@ -473,11 +482,10 @@ public class ServletContext implements javax.servlet.ServletContext {
     @Override
     public <T extends Servlet> T createServlet(Class<T> clazz) throws ServletException {
         try {
-            return clazz.newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
-            e.printStackTrace();
+            return clazz.getConstructor().newInstance();
+        } catch (NoSuchMethodException | InvocationTargetException | InstantiationException | IllegalAccessException e) {
+            throw new ServletException("createServlet error ="+e+",clazz="+clazz,e);
         }
-        return null;
     }
 
     @Override
@@ -495,9 +503,8 @@ public class ServletContext implements javax.servlet.ServletContext {
         try {
             return addFilter(filterName, (Class<? extends Filter>) Class.forName(className));
         } catch (ClassNotFoundException e) {
-            e.printStackTrace();
+            throw new IllegalStateException("addFilter error ="+e+",filterName="+filterName,e);
         }
-        return null;
     }
 
     @Override
@@ -512,9 +519,8 @@ public class ServletContext implements javax.servlet.ServletContext {
         try {
             return addFilter(filterName,filterClass.newInstance());
         } catch (InstantiationException | IllegalAccessException e) {
-            e.printStackTrace();
+            throw new IllegalStateException("addFilter error ="+e,e);
         }
-        return null;
     }
 
     @Override
@@ -522,9 +528,8 @@ public class ServletContext implements javax.servlet.ServletContext {
         try {
             return clazz.newInstance();
         } catch (InstantiationException | IllegalAccessException e) {
-            e.printStackTrace();
+            throw new ServletException("createFilter error ="+e,e);
         }
-        return null;
     }
 
     @Override
@@ -565,7 +570,7 @@ public class ServletContext implements javax.servlet.ServletContext {
         try {
             addListener((Class<? extends EventListener>) Class.forName(className));
         } catch (ClassNotFoundException e) {
-            e.printStackTrace();
+            throw new IllegalStateException("addListener error ="+e+",className="+className,e);
         }
     }
 
@@ -606,7 +611,7 @@ public class ServletContext implements javax.servlet.ServletContext {
         try {
             addListener(listenerClass.newInstance());
         } catch (InstantiationException | IllegalAccessException e) {
-            e.printStackTrace();
+            throw new IllegalStateException("addListener listenerClass ="+listenerClass,e);
         }
     }
 
@@ -615,14 +620,13 @@ public class ServletContext implements javax.servlet.ServletContext {
         try {
             return clazz.newInstance();
         } catch (InstantiationException | IllegalAccessException e) {
-            e.printStackTrace();
+            throw new ServletException("addListener clazz ="+clazz,e);
         }
-        return null;
     }
 
     @Override
     public JspConfigDescriptor getJspConfigDescriptor() {
-        return null;
+        throw new UnsupportedOperationException("getJspConfigDescriptor");
     }
 
     @Override
@@ -632,7 +636,7 @@ public class ServletContext implements javax.servlet.ServletContext {
 
     @Override
     public void declareRoles(String... roleNames) {
-
+        throw new UnsupportedOperationException("declareRoles");
     }
 
     @Override
@@ -673,8 +677,7 @@ public class ServletContext implements javax.servlet.ServletContext {
 
     @Override
     public javax.servlet.ServletRegistration.Dynamic addJspFile(String jspName, String jspFile) {
-        // TODO: 2018/11/11/011  addJspFile
-        return null;
+        throw new UnsupportedOperationException("addJspFile");
     }
 
 }
